# pumpy

./: LA_simple_sim.py  LICENSE  LV_sim.py  LV_simple_sim.py  README.md  TODO  coupled_left_heart.py  fibers.py  ggg.ipynb  left_heart_simple_log.csv  leftheart.py  lv_before.py  main.py  mechanics.py  mmm.py  pressures.py  pyproject.toml  requirements.txt  setup.py  solid_0d_simplified.py  solid_level2.1.py  solid_level2.py  solid_level3.py  test.py  utils.py
examples/: basic_simulation.py  run_full_heart_example.py  run_la_example.py  run_left_heart_example.py  run_lv_example.py
mesh/: figu.ipynb  idealized_LA.msh
outputs/full_heart_example/: pv_la.csv  pv_lv.csv  simlog.csv
outputs/la_example/: pv_la.csv  simlog.csv
outputs/left_heart_example/: pv_la.csv  pv_lv.csv  simlog.csv
outputs/lv_example/: pv_lv.csv  simlog.csv
pumpy/: __init__.py
pumpy/core/: constants.py  electrophysiology.py
pumpy/simulation/: config.py  runner.py
pumpy/src/: materials.py  utils.py
src/pumpy/: __init__.py  cli.py  mesh.py  ode.py  right.py  utils.py
src/pumpy.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
src/pumpy/test/: test_nomesh.py
tests/: check_vols.py  test_elastance.py  test_pressures.py
unfinished_ideas/: coupled_test.py  heart0d.py  leftheart.py  mpi_full_heart.py  run_full_heart.py
