[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pumpy"
version = "0.2.0"
description = "Left-heart hemodynamics toy model (no FEniCSx). Level 1 features: soft valves, Starling, respiration."
authors = [{name = "You", email = "you@example.com"}]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
dependencies = [
  "numpy>=1.23",
  "pandas>=2.0",
  "matplotlib>=3.5",
  "meshio>=5.3",
  "pytest>=8"
]

[project.scripts]
pumpy-run = "pumpy.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "-q"
filterwarnings = ["ignore::RuntimeWarning"]
